# grpc-rust-example

./: Cargo.toml  README.md  build.rs
proto/: sample.proto
